ignore some binary files and stuff, calculate loop genome coverage, loop distribution, syntenic intersection

--- a/netfile.ipynb
+++ b/netfile.ipynb
@@ -2,28 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/usr/local/lib/python3.4/site-packages/matplotlib/__init__.py:872: UserWarning: axes.color_cycle is deprecated and replaced with axes.prop_cycle; please use the latter.\n",
-      "  warnings.warn(self.msg_depr % (key, alt_key))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "import urllib.request\n",
     "import gzip\n",
     "import qgrid\n",
+    "import gffutils\n",
+    "import sqlite3\n",
     "\n",
-    "import os.path as osp"
+    "from itertools import repeat\n",
+    "from scipy.spatial.distance import pdist\n",
+    "\n",
+    "import os.path as osp\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -138,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -163,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -252,60 +251,45 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "block 607 coverage 1.0 covering loop 17\n",
-      "block 1985 coverage 0.0 covering loop 12\n",
-      "block 1541 coverage 1.0 covering loop 159\n",
-      "block 2384 coverage 1.0 covering loop 120\n",
-      "block 321 coverage 1.0 covering loop 12\n",
-      "block 1215 coverage 1.0 covering loop 87\n",
-      "block 1239 coverage 1.0 covering loop 87\n",
-      "block 1414 coverage 1.0 covering loop 87\n",
-      "block 1745 coverage 0.0 covering loop 12\n",
-      "block 907 coverage 0.0 covering loop 12\n",
-      "block 2824 coverage 0.022754525622318215 covering loop 26\n",
-      "block 1054 coverage 1.0 covering loop 87\n",
-      "block 253 coverage 1.0 covering loop 12\n",
-      "block 271 coverage 1.0 covering loop 12\n",
-      "block 1191 coverage 1.0 covering loop 87\n",
-      "block 1029 coverage 1.0 covering loop 87\n",
-      "block 1148 coverage 1.0 covering loop 87\n",
-      "block 1079 coverage 1.0 covering loop 87\n",
-      "block 1799 coverage 0.0 covering loop 12\n",
-      "block 3155 coverage 0.0 covering loop 12\n",
-      "block 1980 coverage 0.0 covering loop 12\n",
-      "block 433 coverage 1.0 covering loop 17\n",
-      "block 1965 coverage 0.0 covering loop 12\n",
-      "block 1971 coverage 0.0 covering loop 12\n",
-      "block 660 coverage 1.0 covering loop 17\n",
-      "block 1731 coverage 0.0 covering loop 12\n",
-      "block 1234 coverage 1.0 covering loop 87\n",
-      "block 383 coverage 1.0 covering loop 17\n",
-      "block 1164 coverage 1.0 covering loop 87\n",
-      "block 1180 coverage 1.0 covering loop 87\n",
-      "block 1839 coverage 0.0 covering loop 12\n",
-      "block 2817 coverage 0.0 covering loop 12\n",
-      "block 478 coverage 1.0 covering loop 17\n",
-      "block 3177 coverage 1.0 covering loop 228\n",
-      "block 1977 coverage 0.0 covering loop 12\n",
-      "block 218 coverage 1.0 covering loop 12\n",
-      "block 2576 coverage 1.0 covering loop 120\n",
-      "block 427 coverage 1.0 covering loop 17\n",
-      "block 217 coverage 1.0 covering loop 12\n",
-      "block 808 coverage 0.0 covering loop 12\n",
-      "block 1409 coverage 1.0 covering loop 87\n",
-      "block 407 coverage 1.0 covering loop 17\n",
-      "block 3062 coverage 1.0 covering loop 30\n",
-      "block 753 coverage 0.0 covering loop 12\n",
-      "block 3136 coverage 0.0 covering loop 12\n",
-      "block 4646 coverage 1.0 covering loop 264\n"
+      "num_loops:  30\n",
+      "loop coverage of chromosome 2L: 0.206956521739\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.4/site-packages/matplotlib/__init__.py:892: UserWarning: axes.color_cycle is deprecated and replaced with axes.prop_cycle; please use the latter.\n",
+      "  warnings.warn(self.msg_depr % (key, alt_key))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.text.Text at 0x116a66278>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAX4AAAERCAYAAAB8eMxzAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEhhJREFUeJzt3X2QXXV9x/F3sgs0sAGTdIlAIZEMfDulI1YceSjlSVAB\nO4rWYWqRFkSqZVDGKWpkULFSHR9QwYdRnutjBQtWVOgDFsFqHCxTpeIXaFxwqIYlu0BigpBk+8c5\ni0uyu7kJe85J8nu/Znbm3nPv3d93zjn72d/9nXN+Z9bY2BiSpHLM7roASVK7DH5JKozBL0mFMfgl\nqTAGvyQVxuCXpML0N/WLI6IfuApYDOwMXAz8FLgG2ADcnZnnNNW+JGlyTfb4TwMeycyjgJcDnwQu\nAd6VmUcDsyPilQ22L0maRJPB/1XgwvpxH7AOeGFm3l4v+zZwfIPtS5Im0dhQT2auAYiIucB1wAXA\nRya8ZRWwR1PtS5Im1+jB3YjYF7gVuDYzv0I1tj9uLvBok+1LkjbV5MHdhcAtwDmZ+Z168V0RcVRm\nfhc4keqfwrTWrVs/1t/fB8C9997LXZddwaIFg02VPakHVg7zR+eexYEHHthqu5L0LMya6oXGgh9Y\nCjwHuDAi3g2MAW8FLouInYB7gOs390tGR9c8/XhkZDWLFgyyZOFezVQ8jZGR1QwPr2q9XUnaGoOD\nc6d8rckx/vOA8yZ56Zim2pQkbZ4XcElSYQx+SSqMwS9JhTH4JakwBr8kFcbgl6TCGPySVBiDX5IK\nY/BLUmEMfkkqjMEvSYUx+CWpMAa/JBXG4Jekwhj8klQYg1+SCmPwS1JhDH5JKozBL0mFMfglqTAG\nvyQVxuCXpMIY/JJUGINfkgpj8EtSYQx+SSqMwS9JhTH4JakwBr8kFcbgl6TCGPySVBiDX5IKY/BL\nUmEMfkkqjMEvSYUx+CWpMAa/JBXG4Jekwhj8klQYg1+SCmPwS1JhDH5JKozBL0mFMfglqTAGvyQV\nxuCXpMIY/JJUGINfkgrT33QDEXEo8MHMPDYiXgDcBNxbv/yZzLyu6RokSb/VaPBHxPnA64HV9aJD\ngI9m5seabFeSNLWmh3ruB06Z8PwQ4OSIuC0iroiI3RpuX5K0kUaDPzNvANZNWLQMOD8zjwaWA+9t\nsn1J0qYaH+PfyI2Z+Vj9+Abg0s19YN68Xenv7wNgdHSAkQaLm878+QMMDs7tqHVJmjltB//NEXFu\nZt4JvAT40eY+MDq65unHIyOrp3lns0ZGVjM8vKqz9iVpS0zXUW07+N8EfCoingR+BZzdcvuSVLzG\ngz8zHwCOqB//N3Bk021KkqbmBVySVBiDX5IKY/BLUmEMfkkqjMEvSYUx+CWpMAa/JBXG4Jekwhj8\nklQYg1+SCmPwS1JhDH5JKozBL0mFMfglqTAGvyQVxuCXpMIY/JJUGINfkgpj8EtSYQx+SSqMwS9J\nhTH4JakwBr8kFcbgl6TCGPySVBiDX5IKY/BLUmEMfkkqjMEvSYXp77oANWP9+vUMDS1vvd3Fi/en\nr6+v9XYl9c7g30ENDS3na9e9kcHBOa21OTy8lte89nKWLDmgtTYlbTmDfwc2ODiHvZ67W9dlSNrG\nOMYvSYUx+CWpMAa/JBXG4Jekwhj8klQYg1+SCmPwS1JhDH5JKozBL0mF6Sn4I+KySZZdO/PlSJKa\nNu2UDRFxBbA/8KKIOGjCSzsBezRZmCSpGZubq+f9wGLgE8BFE5avA+5pqCZJUoOmDf7MHAKGgIMj\nYneqXv6s+uUBYKTJ4iRJM6+n2TkjYimwFFg5YfEY1TCQJGk70uu0zGcBSzJzuMliJEnN6/V0zgdx\nWEeSdgi99vjvA+6IiO8AT4wvzMz3be6DEXEo8MHMPDYilgDXABuAuzPznC0vWZL0bPTa438IuBn4\nDdXB3fGfaUXE+cDlwC71okuAd2Xm0cDsiHjlFlcsSXpWeurxZ+ZFm3/XpO4HTgE+Xz8/JDNvrx9/\nGzgB+PpW/m5J0lbo9ayeDVRn8Uz0f5m573Sfy8wbImLRhEUTvyWswovAJKl1vfb4nx4SioidgFcB\nh29FexsmPJ4LPLq5D8ybtyv9/X0AjI4OdHaEef78AQYH53bU+pYbHR3opN3tbT1JJer14O7TMvMp\n4LqIuGAr2vuviDgqM78LnAjcurkPjI6uefrxyMjqrWhyZoyMrGZ4eFVn7W+prtbV9raepB3VdB2w\nXod6Tp/wdBZwEPDkVtTyt8Dl9beGe4Drt+J3SJKehV57/MdOeDwGPAKc2ssHM/MB4Ij68X3AMVtQ\nnyRphvU6xn9G3UuP+jN3Z+a6RiuTJDWi1/n4D6G6iOta4GrgwfrCLEnSdqbXoZ5LgVMzcxlARBwG\nXAa8uKnCJEnN6PXK3YHx0AfIzB8Av9NMSZKkJvUa/CMTp1eIiFfxzCmaJUnbiV6Hes4GboqIK6lO\n5xyjPlNHkrR96bXHfyKwBlhEdWrnI3hapiRtl3oN/rOBP87MX2fmj4EXAuc2V5YkqSm9Bv9OPPNK\n3SfZdNI2SdJ2oNcx/huBWyPiq/XzV+N0ypK0Xeqpx5+Z76A6lz+obrB+aWZe2GRhkqRm9Dw7Z2Ze\nj5OqSdJ2r9cxfknSDsLgl6TCGPySVBiDX5IKY/BLUmEMfkkqjMEvSYUx+CWpMAa/JBXG4Jekwhj8\nklQYg1+SCmPwS1JhDH5JKozBL0mFMfglqTAGvyQVpuc7cGly69evZ2hoeSdtL168P319fZ20LWn7\nZfA/S0NDy7nri3/DPgt2bbXdh1augb/4NEuWHNBqu5K2fwb/DNhnwa4sXjjQdRmS1BPH+CWpMAa/\nJBXG4Jekwhj8klQYg1+SCmPwS1JhDH5JKozBL0mFMfglqTAGvyQVxuCXpMIY/JJUGINfkgpj8EtS\nYQx+SSqMwS9JhenkRiwR8SPgsfrpzzPzDV3UIUklaj34I2IXgMw8ru22JUnd9PgPBnaLiFuAPuCC\nzFzWQR2SVKQuxvjXAB/OzJcBbwa+GBEea5CklnTR478XuB8gM++LiJXAXsBDk7153rxd6e/vA2B0\ndICRtqrcyPz5AwwOzt1k+ejoAA93UA9MXRNUdXVhupokbRu6CP4zgOcD50TE3sBc4JdTvXl0dM3T\nj0dGVjde3FRGRlYzPLxq0uVdmaqm8de6MF1NktozXQesi+C/ErgqIr4LjAFnZuaGDuqQpCK1HvyZ\nuQ44ve12JUkVD6pKUmEMfkkqjMEvSYUx+CWpMAa/JBXG4Jekwhj8klQYg1+SCmPwS1JhDH5JKozB\nL0mFMfglqTAGvyQVxuCXpMIY/JJUGINfkgpj8EtSYQx+SSqMwS9JhTH4JakwBr8kFcbgl6TCGPyS\nVBiDX5IKY/BLUmEMfkkqjMEvSYUx+CWpMP1dFyB1af369QwNLe+k7cWL96evr6+TtlU2g19FGxpa\nzlu+eRVzFi5otd21K1Zy6clnsmTJAa22K4HBLzFn4QIG9l7YdRlSaxzjl6TCGPySVBiDX5IKY/BL\nUmEMfkkqjMEvSYUx+CWpMAa/JBXG4JekwnjlrlrjvDi92RbX07ZYE3RX17ZYE/S+nxv8as3Q0HLe\n/a2zGVg4p9V2V69Yy/tO+tx2My/O0NByzrvpJnbds91pJNY8vIKPv+IVk66noaHlfOBbP2X3hfu2\nWtPjK37B0pOYctsNDS3nP792H3sNLmqtpl8OPwCvmb6moauXsd/8fVqrCeDBkYfgjKnrmsjgV6sG\nFs5hj71367qMbd6uey5kYO92g2Nzdl+4L/P23r/rMjax1+Ai9nvukq7LeIb95u/Dkj0Xd13GlBzj\nl6TCGPySVBiDX5IKY/BLUmFaP7gbEbOATwMHA08AZ2VmN+c+SVKBuujxvwrYJTOPAJYCl3RQgyQV\nq4vgPxK4GSAzlwEv6qAGSSpWF8G/O/DYhOfrIsJjDZLUki4u4HocmDvh+ezM3NDrhx9YOTzzFfXQ\n5nTXBT60ck1rtUxsc8/NvGd4eG0rtWxJe6tXtFtTL22uXbGypUp6b3PNwytaqqT3Nh9f8YuWKtm4\nzT+Y9j2/HH6gnWImtPc8pr869sGRh1qq5pltLub3enrvrLGxsYbLeaaIeDXwisw8MyIOAy7MzJNb\nLUKSCtZFj/8G4ISI+F79/IwOapCkYrXe45ckdcuDqpJUGINfkgpj8EtSYQx+SSrMDn8jlog4FPhg\nZh4bES8ALgXWAb8BTs/M1i8M2KimLwMLgVnAYuD7mfm6FmuZBVwBBLAeOBt4b1c1TbK9bgLurV/+\nTGZeFxFvA04D1gKfzMwvd1DXJvtRRLyRav09BVycmd9soa5+4Cqq7bQzcDHwA+By4DlU2/D0zGzt\nZPf6gszLqfapDcCbqNbTNfXzuzPznBbqmGzdPAhcxqbb7s3AmXV9H8jMG1uua8ptVv+NfhO4MTM/\nNxM17NA9/og4n2pl7lIv+jhwTmYeR3Va6Tu7rikz/7yu5xRgFDiv5ZJeCuyWmUcCf0cVWJ3UNMn2\nOgT4aGYeV/9cFxEHAa8HDgWOAy6IiM1dyzbTdW28H70jIhYC5wKHAy8HPhAROzVZV+004JHMPAo4\nEfgk8CHgC5l5DPAe4A9bqGOiPwXG6n3qQuDvqebkeldmHg3MjohXtlDHxHXzcqp1M9m22w04HzgM\neFn9nrbq6mWbvZ/qH8KM2aGDH7ifKrzGnZqZP6kf91P1GNu2cU3jLgIuy8yHW67nCWCPulexB/Bk\nhzVtvG4OAU6OiNsi4vKIGKC6jPM/MvOpzPwNcDfVH2ybdW28Hz0BvBi4IzPXZebjwH3A8xuuC+Cr\nVOEK1d/zOuAIYN+I+FfgdcCtLdTxtMz8OtU3H4BFVJ2HF2bm7fWybwPHt1DKxHXTR/VNbLJtN1b/\nzAUGqL75tlXXtNssIl5T13PzTBawQwd/Zt5AtVLHn68AiIgjgHOAj3VdU13PIFXv9Zq26wHuAOYA\nPwM+SzWE0UlNk6ybZcD5dS/x51Q9oZ8AR0XEbhGxgOoPptGb+Pa4H208B9Vqqn+kjcrMNZn564iY\nC1wHXAA8D1iZmScAv6CDb7aZuSEirqban75ENXwxbhUdrZvxTszEbZeZa4CvAD8F7qxrbrUuJtlm\n9bfb11Ht97Om/IVbYYcO/slExKlU9wM4KTPbn6Rlcn8GfCkzu7ia7u3A9zIzqO6R8A8RsXPHNY27\nMTPvqh/fALwgM38GfIqqB3Qp1djoI20XNsl+9DhV+I+bCzzaUi37UvUQr83Mr1Ctj2/UL3+D6ptT\n6zLzDOBAqmNIcya81NW6+cd62TO2XUQcTjVEtwjYDzglIhqdNbiHbfYiqiHNvev3/RXwtoh46Uy0\nX1TwR8RpVP/lj2nzYNcUJv4HP57q628XBvhtT/VRqq+/fR3XNO7mCX+ALwF+FBG/C+yemX8CvJlq\n6OcHbRY1xX70Q+DIiNg5IvYAfp9qGKrpWhYCtwBvz8xr68V3ACfVj48C/qfpOjaq6fURsbR++gTV\nUMWdEXF0vexE4PZJPzyzdWyybqbYdgPAmnr48Emqv4MZHVPfXF1sus3uzsx3ZubhmXks1TfvSzLz\nX2aihh3+rJ5x9ZkGnwAeAG6IiDHgtsy8qKOSJvakDwS6ugvZh4GrI+J2qv1haWaujYguaxr3JuBT\nEfEk8Cvg7MxcHZUfUgXK2zNzVVsFTbcfRcSlVH/As6gOZD45za+aKUupQurCiHg31X71l8CV9Zkq\nj1ENF7TpeuCaiLiNap96C9VQ4hX1Ae976vc0beN10wccxOTb7oSIWEY1pHdHZv5bi3W1vs2cq0eS\nClPUUI8kyeCXpOIY/JJUGINfkgpj8EtSYQx+SSqMwS9NIiKOjojvdF2H1ASDX5qaF7loh1TMlbvS\n1oiIA4DPAfOpJl57a2beWU8FfSXV3C5PUU0AdktEvAdYQnU19gLgs5n5kW6qlyZnj1+a2izgC8DH\nM/Ng4G3A9fW0A5cB/14vfy1wVT2jKVTzBx1DNdHWX9c3bpG2GQa/NLUBYEk9vzyZuQxYSTUB23FU\nPX4y8+dUE8UdWn/u85n5RGY+Bvxz/V5pm2HwS1ObzabzoM+mGiKdajk8854Cszd6LnXO4Jem9jjw\nvxFxCkBEHEZ1L+KfUM2Rfla9fH+qG8J8v/7cayNip4iYR3UbwhmZSleaKQa/NLUxqvujviUifkx1\n45dTMnMd8FbguHr5PwFvGL8zF9Uc9N+rfy6ubx4jbTOcllmaQfVZPWsz80Nd1yJNxR6/JBXGHr8k\nFcYevyQVxuCXpMIY/JJUGINfkgpj8EtSYQx+SSrM/wMahDZxsi7yGQAAAABJRU5ErkJggg==\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x1169d2128>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -330,7 +314,12 @@
     "        return overlap(row['loop_start'], row['loop_stop'], m_start, m_end)\n",
     "    \n",
     "    return overlap_inner\n",
+    "\n",
+    "def array_overlap(segment_a, segment_b):\n",
+    "    return overlap(segment_a[0], segment_a[1], segment_b[0], segment_b[1])\n",
     "    \n",
+    "\n",
+    "blocks = dict(zip(big_syntenic_blocks.index, repeat(None)))\n",
     "for row in big_syntenic_blocks.itertuples():\n",
     "    # calculate coverage with loops\n",
     "    index = row[0]\n",
@@ -344,8 +333,77 @@
     "    \n",
     "    covering_loop = coverage.argmax()\n",
     "    \n",
-    "    print('block {} coverage {} covering loop {}'.format(index, coverage.max(), covering_loop))\n",
+    "    blocks[index] = covering_loop\n",
+    "    #     print('block {} coverage {} covering loop {}'.format(index, coverage.max(), covering_loop))\n",
+    "    \n",
+    "block_series = pd.Series(blocks)\n",
+    "    \n",
+    "# how many loops are there\n",
+    "num_loops = len(loops)\n",
+    "\n",
+    "print('num_loops: ', num_loops)\n",
+    "\n",
+    "# how much of this chromosome is covered by loops\n",
+    "# you can calculate this by generating the condensed overlap matrix\n",
+    "all_overlaps = pdist(loops[['loop_start', 'loop_stop']].values, array_overlap).sum()\n",
+    "all_loops = (loops['loop_stop'] - loops['loop_start']).sum()\n",
+    "\n",
+    "unique_loop_coverage = all_loops - all_overlaps\n",
+    "unique_loop_ratio = unique_loop_coverage / all_loops\n",
+    "\n",
+    "chr_2l_length = 23e6\n",
+    "\n",
+    "print('loop coverage of chromosome 2L:', unique_loop_coverage / chr_2l_length)\n",
+    "\n",
+    "# what is the distribution of loops covered by each\n",
+    "# print(block_series)\n",
+    "sns.countplot(block_series)\n",
+    "plt.xlabel('loop')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# insulator data\n",
+    "# download from http://gbrowse.modencode.org/fgb2/gbrowse/fly/?label=Insulators_CLASSES_KW for class 1, 2\n",
+    "\n",
+    "insulator_file = './Insulators_CLASSES_KW_2L.gff3.txt'\n",
+    "\n",
+    "insulator_db_fn = './insulators.db'\n",
+    "\n",
+    "if not osp.exists(insulator_db_fn):\n",
+    "    gffutils.create_db(insulator_file, insulator_db_fn)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# read insulator db into a pandas frame\n",
+    "with sqlite3.connect(insulator_db_fn) as connection:\n",
+    "    insulator_df = pd.read_sql_query(\"SELECT * from features\", connection)\n",
+    "    insulator_df.drop(['score', 'strand', 'frame', 'extra'], axis=1, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# we want to see that insulator "
    ]
   }
  ],
